--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -1,21 +1,22 @@
-# This Dockerfile is used to build a Docker image for the backend of the project.
-# It starts with the base image "eclipse-temurin:17-jdk-focal" which provides the Java 17 JDK.
-# The working directory is set to "/app".
+# This Dockerfile is used to build a Docker image for the backend of the application.
 
+# Use the eclipse-temurin:17-jdk-focal base image
 FROM eclipse-temurin:17-jdk-focal 
+
+# Set the working directory inside the container to /app
 WORKDIR /app
- 
-# The following lines copy the Maven wrapper files and the project's pom.xml file to the working directory.
-# Then, it runs the "./mvnw dependency:go-offline" command to download all the project dependencies.
 
+# Copy the .mvn/ directory from the host to the container
 COPY .mvn/ .mvn
-COPY mvnw pom.xml ./
-RUN ./mvnw dependency:go-offline
- 
-# The "src" directory containing the project source code is copied to the working directory.
 
+# Copy the mvnw and pom.xml files from the host to the container
+COPY mvnw pom.xml ./
+
+# Run the Maven command to download the project dependencies
+RUN ./mvnw dependency:go-offline
+
+# Copy the src/ directory from the host to the container
 COPY src ./src
 
-# The "input" directory containing input files for the project is copied to the working directory.
-
+# Copy the input/ directory from the host to the container
 COPY input ./input
